feat: implemnented watch list and its endpoints
